--- a/resume/resume/index.html
+++ b/resume/resume/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
 
 <head>
-
     <title>Akira Kyles Resume</title>
-<link rel="stylesheet" href="style.css">
+<style>
+    h1 {
+   color: blue;
+   font-size: 36px;
+}
+</style>
 </head>
 
 <body>
@@ -44,20 +48,25 @@
 <h5>May 2016 - November 2018</h5>
 <p>Produced written and visual content in the Baltimore/Washington, DC area. Covered events. Produced live social media coverage content. </p>
 <h2>Education</h2>
-	<ul>
+●	<ul>
     <li>B.A., Multimedia Journalism,  Morgan State University, 2018</li>
-	<li>M.A., Investigative Journalism, University of Maryland College Park, 2026</li>
+●	<li>M.A., Investigative Journalism, University of Maryland College Park, 2026</li>
 </ul>
 
 <h2>Skills </h2>
-<ul>	
-<li>Social Media Content creation. Instagram and TikTok content management with photos and video.</li> 
-<li>Social Media Coverage. Live news coverage using social media platforms such as X (formerly Twitter) and Facebook Live. </li>
-<li>Reporting. Breaking news reporting, feature reporting,  crime reporting. culture reporting. food reporting</li>
-<li>Editing and fact checking.</li>
-<li>Google Drive. Primarily Google docs, Google Sheets and Google Slides. </li>
-<li>SEO. I know how to analyze and improve SEO through Parse.ly</li>
-<li>CMS. ARC, SNAP, Presto, and WordPress.</il>
+<ul>	Social Media Content creation. Instagram and TikTok content management with photos and video. 
+<il>	Social Media Coverage. Live news coverage using social media platforms such as X (formerly Twitter) and Facebook Live. 
+</il>
+<il>Reporting. Breaking news reporting, feature reporting,  crime reporting. culture reporting. food reporting
+</il>
+<il> Editing and fact checking.
+</il>
+<il>Google Drive. Primarily Google docs, Google Sheets and Google Slides. 
+</il>
+<il>SEO. I know how to analyze and improve SEO through Parse.ly
+</il>
+<il>CMS. ARC, SNAP, Presto, and WordPress.
+</il>
 </ul>
 
     
