--- a/resume/index.html
+++ b/resume/index.html
@@ -12,7 +12,7 @@
 
 <h1>Akira Kyles</h1>
 <strong>Multimedia Journalist</strong><br>
-<img src="akira.jpg" width="300px">
+<!--<img src="akira.jpg" width="300px">-->
 <p>I am a multimedia journalist experienced with skills, including SEO, writing and editing copy, social media management, and event coverage.  I am dedicated to enhancing my skills as I continue to grow in journalism. 
 </p>
 <ul>
