kyles_resume_css

--- a/resume/index.html
+++ b/resume/index.html
@@ -10,7 +10,7 @@
 <body>
 <!-- I built this myself! -->
 
-<h1>Akira Kyles</h1>
+<div id="name">Akira Kyles</div>
 <strong>Multimedia Journalist</strong><br>
 <!--<img src="akira.jpg" width="300px">-->
 <p>I am a multimedia journalist experienced with skills, including SEO, writing and editing copy, social media management, and event coverage.  I am dedicated to enhancing my skills as I continue to grow in journalism. 
@@ -22,7 +22,7 @@
     <li>GitHub</li>
 </ul>
 
-<h2>Experience</h2>
+<div class="sectionheader">Experience</div>
 <h3>Freelancer </h3>
 <h4>Washington City Paper</h4>  
 <h5>April 2024 - Present</h5>
@@ -43,13 +43,13 @@
 <h4>The Afro-American Newspaper</h4>
 <h5>May 2016 - November 2018</h5>
 <p>Produced written and visual content in the Baltimore/Washington, DC area. Covered events. Produced live social media coverage content. </p>
-<h2>Education</h2>
+<div class="sectionheader">Education</div>
 	<ul>
     <li>B.A., Multimedia Journalism,  Morgan State University, 2018</li>
 	<li>M.A., Investigative Journalism, University of Maryland College Park, 2026</li>
 </ul>
 
-<h2>Skills </h2>
+<div class="sectionheader">Skills </div>
 <ul>	
 <li>Social Media Content creation. Instagram and TikTok content management with photos and video.</li> 
 <li>Social Media Coverage. Live news coverage using social media platforms such as X (formerly Twitter) and Facebook Live. </li>
