--- a/KylesLayout/index.html
+++ b/KylesLayout/index.html
@@ -6,7 +6,7 @@
      <title>The Underground</title>   
     </head>
     <body>
-<img src="C:\Users\AKBas\Documents\GitHub\akyles-jour652\KylesLayout\mastheadr.jpg" alt="The Underground" class="center"><br>
+<img src="C:\Users\AKBas\Documents\GitHub\akyles-jour652\KylesLayout\Images\midterm-review\mastheadr.jpg" alt="The Underground" class="center"><br>
 
         <div id="content">
             
