--- a/KylesLayout/index.html
+++ b/KylesLayout/index.html
@@ -6,13 +6,13 @@
      <title>The Underground</title>   
     </head>
     <body>
-<img src="C:\Users\AKBas\Documents\GitHub\akyles-jour652\KylesLayout\Images\mastheadr.jpg" alt="The Underground" class="center"><br>
+<img src="images/mastheadr.jpg" alt="The Underground" class="center"><br>
 
         <div id="content">
             
 
 <div id="img-div"> 
-    <img src="C:\Users\AKBas\Documents\GitHub\akyles-jour652\KylesLayout\images\image4.jpeg" alt="BYD electric cars in Nepal" id="image">
+    <img src="images\image4.jpeg" alt="BYD electric cars in Nepal" id="image">
     <caption id="image-caption">Electric vehicles by BYD making waves in Nepal.</caption>
   </div>
 <h1>Electric car boom hits Nepal</h1>
@@ -56,7 +56,7 @@ Published July 28, 2025 Updated July 29, 2025</p>
 <p>“Given the economic sense that this E.V. conversion represents for Nepal, I think I would see it as unlikely that we would have major policy change,” Mr. Cauchois said. “But that’s basically a wish more than a conviction.”</p>
 
 <div id="img-div"> 
-<img src="C:\Users\AKBas\Documents\GitHub\akyles-jour652\KylesLayout\images\image1.jpeg" alt="Residents of Nepal"id="image"> <caption id="image-caption">Large foot traffic in Nepal.</caption><br>
+<img src="images\image1.jpeg" alt="Residents of Nepal"id="image"> <caption id="image-caption">Large foot traffic in Nepal.</caption><br>
 
 <h3>From Indian Gasoline to Chinese Cars</h3>
 
@@ -83,7 +83,7 @@ Published July 28, 2025 Updated July 29, 2025</p>
 <p>“At first, everybody was scared — how to establish and whether it would run or not,” said Kul Man Ghising, who managed the electricity authority until March. “But we tried and tried and tried.” Businesses have now installed about 1,200 chargers, according to the agency, and private residences are likely to have thousands more.</p>
 
 <div id="img-div"> 
-<img src="C:\Users\AKBas\Documents\GitHub\akyles-jour652\KylesLayout\images\image5.jpeg" alt="Test driving EVs in Nepal" id="image"><caption id="image-caption">A Nepal resident test driving a car from the E.V. fleet.</caption><br>
+<img src="images\image5.jpeg" alt="Test driving EVs in Nepal" id="image"><caption id="image-caption">A Nepal resident test driving a car from the E.V. fleet.</caption><br>
 
 
 <h3>‘A Win-Win Situation’</h3>
@@ -128,7 +128,7 @@ Nepal data represents imports, and is delineated by years starting and ending in
 
 
 <div id="img-div"> 
-<img src="C:\Users\AKBas\Documents\GitHub\akyles-jour652\KylesLayout\images\image10.jpeg" alt="Increased charging stations" id="image">
+<img src="images\image10.jpeg" alt="Increased charging stations" id="image">
 <caption id="image-caption">Charging station infrastructure builds with BYD lauch</caption><br>
 
 
