--- a/midterm/kyles_midterm.html
+++ b/midterm/kyles_midterm.html
@@ -12,7 +12,8 @@
 <img src="images/mastheadm.jpg" alt="Golf Weekly" class="center"><br>
 
     <div id="img-div"> 
-    <img src="images/image1.jpg" alt="Black caddies" id="image"></div>
+    <img src="images/image1.jpg" alt="Black caddies" id="image">
+    <caption id="image-caption">John H. “Stovepipe” Gordon (center) with his fellow caddies at the 1935 tournament.(Source: Garden&Gun)</caption>
 
 <h1>Who's your caddy?: How Black caddies of Augusta National shaped legends</h1>
         
@@ -45,6 +46,9 @@ April/May 2024
 
 <p>Stokes’s roots on the land gave him an advantage—he knew how to read the fairways and greens better than others. Take Rae’s Creek. Over the years, Augusta National has modified the course many times, but some water features are too ingrained to redirect. That was the secret of Rae’s, a ten-mile-long stream—up to sixty feet wide and four feet deep—that still cuts through the course. Surrounded by azaleas and dogwoods, the waterway is a major element of the infamous three-hole stretch, filled with hazards, called Amen Corner. Stokes understood that every putt would break toward Rae’s, the pull of gravity sending balls toward the lowest point on the property. Stokes also followed falling water: He became noted for studying how rain streamed across the greens, rendering the nuances of the topography visible.</p>
 
+ <div id="img-div"> 
+    <img src="images/image3.jpg" alt="Black caddies" id="image"><caption id="image-caption">Arnold Palmer with Nathaniel “Iron Man” Avery, alongside other caddies, in 1965.(Source: Garden&Gun)</caption></div>
+
 <p>Augusta National first put on what would come to be called the Masters Tournament in 1934 with its rule in place—attributed to Roberts—that golfers would always be white, and the caddies would always be Black. The segregated course had support from the top: From that same year until 1961, the Professional Golfers’ Association of America had a “Caucasian-only” clause in its bylaws, preventing non-whites from membership and thus from competing on the PGA Tour.</p>
 
 <p>In 1938, the seventeen-year-old Stokes won his first Masters as a caddie for eventual Hall of Famer Henry Picard. He won again in 1948, with Claude Harmon; in 1951 and 1953, with the legendary Ben Hogan; and in 1956, with Jack Burke Jr. Stokes ties with latter-day caddies Steve Williams and Willie Peterson for the greatest number of Masters wins (five), but he remains the only one to do it with four different golfers.</p>
@@ -58,12 +62,12 @@ April/May 2024
 <p>In those early days, ever one step away from being called “boy,” this second generation of caddies became a cast of characters known instead by the nicknames they gave one another, often sparked by funny childhood moments. Bennett got called Burnt Biscuits because he tried to steal one of his grandmother’s biscuits and burned himself so badly, he wound up in the hospital. Jones became Cigarette after he got caught smoking while underage. Dent, though smaller in stature than he used to be, still stands a head above the other caddies, hence Big Boy. Choice’s sobriquet, Stabber, came from his golf technique: He just kept stabbing the ball.</p>
 
 <h2>What makes a caddy?</h2>
+ <div id="img-div"> 
+    <img src="images/image2.jpg" alt="Black caddies" id="image"><caption id="image-caption">Ben Hogan at the 1954 Masters with his caddie.(Source: Garden&Gun)</caption></div>
 
 <p>The best caddies employ the properties and laws that govern space, time, energy, and matter—but using only their eyes and ears to assess equations that are always changing. Every day they wake up, walk the greens, and run their calculations again, adjusting for a golfer’s fortes, foibles, and equipment. Caddies must be naturalist, physicist, and psychologist, all wrapped in one white coverall.</p>
 
 <p>That dynamic played out during the 1979 Masters, when Jariah “Bubba” Beard was on the bag for Fuzzy Zoeller. “As far as having a plan when I got to Augusta…I had no plan,” Zoeller admitted in Loopers: The Caddie’s Long Walk, a 2019 documentary about the worldwide history of caddies, also known as loopers. “[Beard] told me where to hit it, where not to hit it…it was like a blind man with a Seeing Eye dog. He led me around that golf course.” By relying on Beard, Zoeller became the last Masters player to win the tournament on his first try—a feat that, without a local caddie, no one can seem to repeat.</p>
-
-
 
 <p>“When I met Carl Jackson, I said, what a gift this is,” recalled Ben Crenshaw in “Vanishing of the Black Caddie,” a news segment that ran in 2021 on the Dallas television station WFAA. “I can’t tell you how many times he helped me in so many instances.” Crenshaw’s 1976 pairing with Jackson, a talented, meticulous, trusted golf companion, became a lifelong working relationship. “It was pretty simple for me,” he says. “I had the best, and I never saw any reason to change whatsoever.” Jackson, who had caddied his first Masters at age fourteen, was on the bag for fifty-four of the tournaments and remained Crenshaw’s caddie until the golfer retired. The two remain tight. Jackson himself said last year would mark his final appearance at Augusta.</p>
 
@@ -85,6 +89,7 @@ April/May 2024
 
 <p>Some of the men, though, past their prime and unwilling to pull up stakes, instead picked up odd jobs or learned a new trade, leaving the fairways forever. Others remained part of Augusta National’s caddie corps. Carl Jackson helped Ben Crenshaw to his two Masters wins, in 1984 and 1995. Charles “Bull” Williams helped George H. W. Bush get around the links—the pair got on so well, bonding over fishing, that they exchanged letters for decades.</p>
 
+
 <p>The world of caddying, naturally, dramatically changed in the forty years after the Masters ban was lifted. Jones says the biggest check he ever earned was “maybe forty-five hundred or forty-six hundred dollars.” Now, Dent muses, “caddies make more money in one win than a man might see in his lifetime.” Black faces on the greens, too, have all but disappeared. “We only have two Black people on the PGA Tour right now,” Dent points out. “When I was out on tour, we had fourteen at one time.” That’s the irony of the Masters’ all-Black-caddie rule: It was archaic and steeped in racism. And it also, the men admit, granted them entry to a gilded world where they had a chance to learn the game.</p>
 
 <p>Living in Augusta means holding these kinds of multiple truths at once. The municipality is a place of great beauty, with flowering plants on every corner underscoring its nickname, Garden City. It also once fostered an atmosphere so oppressive that in 1970 it led to the largest urban uprising in the Deep South during the civil rights era, known as the Augusta Riot. And though the Black caddies played a pivotal part in the city’s reputation as a golf mecca, they went without commemoration or celebration for much of the past four decades.</p>
@@ -93,10 +98,13 @@ April/May 2024
 
 <p>But then a business opportunity led the entrepreneur, then based in Atlanta, to the golf course, to sponsor an HBCU clinic and tournament, and there he began to reconsider the history of his Augusta childhood. Now, with the help of a local university student, Courtney Wilson, he interviews any caddies he can find in order to immortalize them. “This is Black history,” he says. “Nowhere else could you say, ‘Black people dominated this facet of the sport for fifty years.’ That’s what makes the story so interesting.” He doesn’t himself play golf, but Maben spends time at the Augusta Municipal Golf Course, known as the Patch, and its clubhouse and cardroom, where the men gather, to hear those stories—while he can.</p>
 
+<blockquote>“There’s no other sport as natural as golf,” Lacey will explain. “That’s why golf transcends from one country to the next. It’s the only life sport, where you can play it at a hundred years old.”</blockquote>
+
 <h2>Remembering the caddies</h2>
+ <div id="img-div"> 
+    <img src="images/image7.jpg" alt="Black caddies" id="image"><caption id="image-caption">Ben Hogan at the 1954 Masters with his caddie.(Source: Garden&Gun)</caption></div>
 
 <p>The numbers of the old-school Black caddies have decreased, and recognition has come but lately. Lee Elder—a former caddie who also broke the Masters race barrier as a player, in 1975—died in 2021, not long after Augusta National and Paine College, an HBCU in Augusta, partnered to create endowed scholarships in his name. In 2023, Jariah Beard succumbed to cancer, and John Luther Elam Jr., a caddie who helped desegregate the Patch, died too.</p>
-
 
 
 <p>The small Lucy Craft Laney Museum of Black History and Conference Center, housed in the former Augusta home of a prominent African American educator and activist, has also played a mighty part in recognizing the caddies. Since early 2023, on one weekend a month, the museum has presented “Men on the Bag: The Stories of Augusta’s Famous Black Caddies.” Through the artistic direction of the Augusta Mini Theatre, young actors portray three of the now-deceased iconic caddies. Corey Rogers, the Laney’s executive director, wrote much of the script, taking cues from Men on the Bag, a book by Ward Clayton that delves into the caddies’ backstories. Clayton will publish a revised version, The Legendary Caddies of Augusta National: Inside Stories from Golf ’s Greatest Stage, in early April.</p>
@@ -106,6 +114,8 @@ April/May 2024
 <p>“The caddies did not let a lot of their surroundings define who they were or allow that to be a ceiling on what they wanted to accomplish,” Rogers says of the images. “Some people think that these men were performing this subservient role by toting the bag. It was much more complex than that. We don’t want people to get the impression that these individuals were downtrodden. Some may be bitter or upset over the treatment and work conditions, but everybody’s story is different, with many emotions in it. We want to tell each individual story and not paint things with a simplistic broad brush.”</p>
 
 <h2>The future of caddies</h2>
+ <div id="img-div"> 
+    <img src="images/image9.jpg" alt="Black caddies" id="image"><caption id="image-caption">Golfers Gil Morgan and Gary Player with their caddies in 1981.(Source: Garden&Gun)</caption></div>
 
 <p>But that legacy isn’t limited to the past. When asked about the future of Augusta’s Black golfers, Bennett and Jones both point to one man: André Lacey II.</p>
 
@@ -122,6 +132,15 @@ April/May 2024
 <p>In his element, Lacey is loose and expressive. Six foot one, sure-footed and graceful, with a radiant smile that seems to amplify the warmth of his voice as he talks to the group in front of him. “There’s no other sport as natural as golf,” Lacey will explain. “That’s why golf transcends from one country to the next. It’s the only life sport, where you can play it at a hundred years old.”</p>
 
 <p>The camp will end at noon, and depending on what the sky looks like, Lacey might head to the Patch afterward, to the beloved clubhouse with its treasured card games. Perhaps he’ll even join the old caddies for a round. “Every day is a good day,” one might remind the other. And as they prepare to play, the private jets will rocket over their heads on their way to somewhere else, the aircraft disappearing beyond the horizon as the Black golfers of Augusta shoulder their bags and head toward the first tee.</p>
+</div>
+<div class="container">
+    <h4>Related Links</h4>
+<div class="row">
+     <div class="col-md-3"><a href="https://gardenandgun.com/articles/the-masters-by-the-numbers/">The The Masters by the Numbers</a></div>
+   <div class="col-md-3"><a href="https://gardenandgun.com/articles/southern-streaming-the-masters-a-walton-goggins-showcase-and-a-trisha-yearwood-tribute/"> Southern Streaming: the Masters, a Walton Goggins Showcase, and a Trisha Yearwood Tribute</a></div>
+   <div class="col-md-3"><a href="https://gardenandgun.com/feature/a-century-on-the-chincoteague-pony-swim-still-sparks-unbridled-joy/">A Century On, the Chincoteague Pony Swim Still Sparks Unbridled Joy</a></div>
+    <div class="col-md-3"><a href="https://gardenandgun.com/articles/a-federally-endangered-species-was-released-on-private-land-in-florida-thats-a-big-deal/"> A Federally Endangered Species Was Released on Private Land in Florida. That’s a Big Deal.</a></div>
+</div>
 </div>
 </body>
 </html>
