--- a/resume_project/akira-kyles-resume.html
+++ b/resume_project/akira-kyles-resume.html
@@ -36,14 +36,19 @@
 </nav>
 <!-- Navbar ends -->
     <img src="images/res_masthead.jpg" width="300px">
+<div class= "container1">
+    <div class="row">
+        <div class="col-md-12">
 <h1>My bio</h1>
 
-<p>I am a multimedia journalist experienced with skills, including SEO, writing and editing copy, social media management, and event coverage.  I am dedicated to enhancing my skills as I continue to grow in journalism. </p>
+<p>I am a multimedia journalist experienced with skills, including SEO, writing and editing copy, social media management, and event coverage.  I am dedicated to enhancing my skills as I continue to grow in journalism. </p></div>
+</div>
+</div>
 
 <div class= "container"><br>
 <div class="row">
-    <div class="col-sm-12 col-md-6 column-divider">
-    <h2>Experience</h2></div>
+    <div class="col-6">
+    <h2>Experience</h2>
     <p><h3>Freelancer </h3>
 <h4>Washington City Paper</h4>  
 <h5>April 2024 - Present</h5>
@@ -63,15 +68,16 @@
 <h3>Freelancer</h3>
 <h4>The Afro-American Newspaper</h4>
 <h5>May 2016 - November 2018</h5>
-<p>Produced written and visual content in the Baltimore/Washington, DC area. Covered events. Produced live social media coverage content. </p></p>
+<p>Produced written and visual content in the Baltimore/Washington, DC area. Covered events. Produced live social media coverage content. 
     <h4>Education</h4>
     <p><ul>
     <li>B.A., Multimedia Journalism,  Morgan State University, 2018</li>
 	<li>M.A., Investigative Journalism, University of Maryland College Park, 2026</li>
 </ul>
-</p>
-    <div class="col-sm-12 col-md-3 column-divider">Skills</div>
-    <p><ul>	Social Media Content creation. Instagram and TikTok content management with photos and video. 
+</p></div>
+        <div class="col-6"> 
+            <h4>Skills</h4>
+            <p><ul>	Social Media Content creation. Instagram and TikTok content management with photos and video. 
 <il>	Social Media Coverage. Live news coverage using social media platforms such as X (formerly Twitter) and Facebook Live. 
 </il>
 <il>Reporting. Breaking news reporting, feature reporting,  crime reporting. culture reporting. food reporting
@@ -85,10 +91,12 @@
 <il>CMS. ARC, SNAP, Presto, and WordPress.
 </il>
 </ul> </p>
-    <div class="col-sm-12 col-md-3">Awards</div>
-    <p>MDDC Press Award</p>
-    </div>
-     </div>
+        
+<h4>Awards</h4>
+            <p>MDDC Press Award</p>
+        </div>
+        </div>
+      </div>
 </div>
    
 </body>
