--- a/resume_project/akira-kyles-resume.html
+++ b/resume_project/akira-kyles-resume.html
@@ -1,15 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="utf-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <link rel="stylesheet" type="text/css"
         href="stylesheet.css">
     <title>Akira Kyles Resume</title>
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+ <!-- Bootstrap CSS and JavaScript -->
+ <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+
+ <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+     
 </head>
-<!-- Navbar -->
 <body>
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+   <div class="container-fluid">
+     <a class="navbar-brand" href="#">Akira Kyles</a>
+     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+       <span class="navbar-toggler-icon"></span>
+     </button>
+     <div class="collapse navbar-collapse" id="navbarSupportedContent">
+       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+         <li class="nav-item">
+           <a class="nav-link active" aria-current="page" href="#">Experience</a>
+         </li>
+         <li class="nav-item">
+           <a class="nav-link" href="#">Skills</a>
+         </li>
+         <li class="nav-item">
+           <a class="nav-link" href="Akira_Kyles_Clips.pdf">Clips</a>
+         </li>
+       </ul>
+     </div>
+   </div>
+ </nav>
 
 
 <!-- Navbar ends -->
@@ -22,9 +52,9 @@
 </div>
 </div>
 
-<div class= "container mt-4">
+<div class= "container2">
 <div class="row">
-    <div class="col-md-8">
+    <div class="col-md-6">
     <h2>Experience</h2>
     <h3>Freelancer </h3>
 <h4>Washington City Paper</h4>  
@@ -46,13 +76,20 @@
 <h4>The Afro-American Newspaper</h4>
 <h5>May 2016 - November 2018</h5>
 <p>Produced written and visual content in the Baltimore/Washington, DC area. Covered events. Produced live social media coverage content.</p>
+</div>
+</div>
+
+<hr>
+
     <h4>Education</h4>
         <ul>
     <li>B.A., Multimedia Journalism,  Morgan State University, 2018</li>
 	<li>M.A., Investigative Journalism, University of Maryland College Park, 2026</li>
 </ul>
-</div>
-        <div class="col-md-4"> 
+
+<hr>
+
+    <div class="col-md-6">
             <h4>Skills</h4>
             <ul>
                 <li>Social Media Content creation. Instagram and TikTok content management with photos and video.</li> 
@@ -68,7 +105,10 @@
 </li>
 <li>CMS. ARC, SNAP, Presto, and WordPress.
 </li>
-</ul>      
+</ul>
+
+<hr>
+
 <h4>Awards</h4>
 <ul>
 <li>MDDC Press Award — Public Notice Reporting (2024)</li>
@@ -79,8 +119,8 @@
 <li>Crime Reporting — MDDC Press Award (2016)</li>
 </ul>
        </div> 
-      </div>
-      </div>
+       <div
+
       
   <footer>©2025 Akira Kyles Resume</footer>
 </body> 
