--- a/midterm/kyles_midterm.html
+++ b/midterm/kyles_midterm.html
@@ -13,7 +13,7 @@
 
     <div id="img-div"> 
     <img src="images/image1.jpg" alt="Black caddies" id="image">
-    <caption id="image-caption">John H. “Stovepipe” Gordon (center) with his fellow caddies at the 1935 tournament.(Source: Garden&Gun)</caption>
+    <caption id="image-caption">John H. “Stovepipe” Gordon (center) with his fellow caddies at the 1935 tournament.(Source: Garden&Gun)</caption></div>
 
 <h1>Who's your caddy?: How Black caddies of Augusta National shaped legends</h1>
         
