--- a/Final Project/akira-kyles-finalproj.html
+++ b/Final Project/akira-kyles-finalproj.html
@@ -3,8 +3,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Femme Fatality</title>
-  <meta name="description" content="Merrill College of Journalism, UMD">
+  <title>Fatal Force</title>
+  <meta name="description" content="Washington Post">
   <meta name="author" content="Akira Kyles">
 
   <!-- Bootstrap CSS and JavaScript -->
@@ -13,7 +13,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-<link rel="stylesheet" type="text/css" href="stylesheet.css">>
+<link rel="stylesheet" type="text/css" href="stylesheet.css">
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,31 +23,53 @@
 
 <body>
 
+<div class="hero-container">
+<img src="images/mas-head.jpg" class="hero-image"> 
+<div class="hero-text">
+<div class="hero-head"> Fatal Force</div>
+  <div class="hero-sub"> Over 450 women have lost their lives at the hands of armed police officers</div>
+</div>
+</div>
+
+<div class="women">
+    <img src="images/Web 1920 – 1.png" class="hero-image">
+    <div class="photo-text">
+        <div class="side-text">The fatal shooting of Breonna Taylor by Louisville police in March has made her name a rallying cry — #SayHerName — for policing overhauls and racial justice for women nationwide. </div>
+    </div>
+</div>
+
+<div class="mental">
+<iframe title="[ Insert title here ]" aria-label="Symbol map" id="datawrapper-chart-2MpMa" src="https://datawrapper.dwcdn.net/2MpMa/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="446" data-external="1"></iframe><script type="text/javascript">window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r,i=0;r=e[i];i++)if(r.contentWindow===a.source){var d=a.data["datawrapper-height"][t]+"px";r.style.height=d}}});</script><div class="map-text">
+        <div class="graph-text">At least 88 Black women have been fatally shot by police since 2015.</div>
+    </div></div>
+
+    <br>
 
 <div class="container">
-<p class="headline">Femme Fatality</p>
-<p class="Subheadline">Over 400 women have been fatally shot by police since 2015</p>
-<p class="byline"> Marisa Iati, Jennifer Jenkins and Sommer Brugal</p>
+<p class="subheadline">Over 450 women have been fatally shot by police since 2015</p>
+<p class="byline"> By Marisa Iati, Jennifer Jenkins and Sommer Brugal</p>
 
 <p>After Louisville police fatally shot 26-year-old Breonna Taylor during a nighttime raid at her home in March, her killing could have been just another in a long line of deadly police shootings of women that have drawn little publicity.</p>
 
 <p>But the death of Taylor, who was Black, fell between two high-profile killings of Black men. In February, a retired police detective, his son and a third man allegedly killed Ahmaud Arbery, 25, in a Georgia suburb. In May, a Minneapolis police officer knelt for nearly eight minutes on the neck of 46-year-old George Floyd, fatally injuring him.</p>
 
-<p>Taylor’s name has become a rallying cry — #SayHerName — for policing overhauls and racial justice nationwide. Her image is on magazine covers, her name emblazoned on WNBA uniforms and more than five months later, protests over her death continue in Louisville. Her killing has brought into focus an often overlooked but consistent subset of people fatally shot by police — women.</p>
+<p>Taylor’s name has become a rallying cry — <span class="hashtag">#SayHerName</span> — for policing overhauls and racial justice nationwide. Her image is on magazine covers, her name emblazoned on WNBA uniforms and more than five months later, protests over her death continue in Louisville. Her killing has brought into focus an often overlooked but consistent subset of people fatally shot by police — women.</p>
 
-<p>Since The Washington Post began tracking fatal shootings by police in 2015, officers have fatally shot 247 women out of the more than 5,600 people killed overall.</p>
+<p>Since The Washington Post began tracking fatal shootings by police in 2015, officers have fatally shot 462 women out of the more than 10,400 people killed overall.</p>
 
 <p>The names of these women are often not as well known as the men, but their deaths in some cases raise the same questions about the use of deadly force by police and, in particular, its use on Black Americans.</p>
 
-<p>The Post found only one other fatal shooting that closely matched Taylor’s case — a Black woman, unarmed, killed during a raid at home while a boyfriend shot at police. But 139 other cases shared one or more of the circumstances in which Taylor was killed.</p>
+<p>The Post found only one other fatal shooting that closely matched Taylor’s case — a Black woman, unarmed, killed during a raid at home while a boyfriend shot at police. But at least 139 other cases shared one or more of the circumstances in which Taylor was killed.</p>
 
-<p>Of the 247 women fatally shot, 48 were Black and seven of those were unarmed.</p>
+<p>Of the 462 women fatally shot, 88 were Black and 42 of those were unarmed.</p>
+
+<div class="mental">
+    <iframe id="datawrapper-chart" title="Unarmed women fatally shot by police" aria-label="Small multiple column chart" id="datawrapper-chart-9gTmq" src="https://datawrapper.dwcdn.net/9gTmq/4/?theme=dark" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="274" data-external="1"></iframe><script type="text/javascript">window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r,i=0;r=e[i];i++)if(r.contentWindow===a.source){var d=a.data["datawrapper-height"][t]+"px";r.style.height=d}}});</script></div>
+    <br>
 
 <p>At least 89 of the women were at their homes or residences where they sometimes stayed. And 12 of those women killed at home were shot by officers who were there to conduct a search or make an arrest.</p>
 
 <p>Since 2015, Black women have accounted for less than 1 percent of the overall fatal shootings in cases where race was known. But within this small subset, Black women, who are 13 percent of the female population, account for 20 percent of the women shot and killed and 28 percent of the unarmed deaths.</p>
-
-graphic 
 
 <p>Black men, 12 percent of the male population, make up 27 percent of the men shot and 36 percent of the unarmed deaths.</p>
 
@@ -61,15 +83,24 @@ graphic
 
 <p>In an appeal, Hankison’s attorney, David Leightty, wrote the officer should not have been fired, noting that the FBI and the Kentucky attorney general’s office were still investigating. “Brett Hankison did not ‘blindly’ discharge his firearm, and did not lack cognizance of the direction in which he fired, but acted in quick response to gunfire directed at himself and other officers,” Leightty wrote.</p>
 
+<div id="img-div"> 
+<img src="images/taylor family.jpg" alt="Taylor's family" id="image">
+<caption id="image-caption">Photo by ABC News | Breonna Taylor's family disheartened due to the lack of homicide charges against the officers who shot her.</caption></div> 
+<br>
+
 <p>A spokesperson for the Louisville Metro Police Department and Walker’s attorney did not respond to requests for comment. Taylor’s family also declined to comment.</p>
 
-<p>Taylor’s death “could have easily been forgotten, and it was almost forgotten,” said Kimberlé Crenshaw, executive director of the African American Policy Forum, a racial justice think tank which created the #SayHerName campaign in 2014 to elevate the stories of Black women killed by police. “But I think the fact that other cases were happening in the same season made it harder to simply overlook her case.”</p>
+<p>Taylor’s death “could have easily been forgotten, and it was almost forgotten,” said Kimberlé Crenshaw, executive director of the African American Policy Forum, a racial justice think tank which created the <span class="hashtag">#SayHerName</span> campaign in 2014 to elevate the stories of Black women killed by police. “But I think the fact that other cases were happening in the same season made it harder to simply overlook her case.”</p>
 
-<p>Because women overall account for a much smaller number of people killed by police, Crenshaw said Black women often are left out of the public narrative about the use of force by police against Black people. Police have shot and killed 1,274 Black men since January 2015.</p>
+<p>Because women overall account for a much smaller number of people killed by police, Crenshaw said Black women often are left out of the public narrative about the use of force by police against Black people. Police have shot and killed 2,401 Black men since January 2015.</p>
 
-<p>Crenshaw said Black women’s deaths also may be dismissed as “collateral damage” if they are killed while police are pursuing someone else. Twenty of the 247 women were killed in that kind of situation, analysis shows. In 12 of those 20 shootings, police said the women killed were caught in crossfire or shot accidentally.</p>
+<p>Crenshaw said Black women’s deaths also may be dismissed as “collateral damage” if they are killed while police are pursuing someone else. At least twenty of the 462 women were killed in that kind of situation, analysis shows. In 12 of those 20 shootings, police said the women killed were caught in crossfire or shot accidentally.</p>
 
 <p>“As long as Black women lose their lives in circumstances like these, their lost life won’t be dramatized in a way that mobilizes the kinds of reforms that have to happen in order to protect more life and to make police officers accountable,” Crenshaw said.</p>
+
+<div id="img-div"> 
+<img src="images/blm.jpg" alt="Protest1" id="image">
+<span class= "caption"><caption id="image-caption">BLM protestors join together to carry a sign focused on honoring Black women.</caption></span></div> <br>
 
 <p>The shooting with circumstances most similar to Taylor’s killing is that of Alteria Woods, 21, who was killed on March 19, 2017, when members of the Indian River County Sheriff’s Office SWAT team went to her boyfriend’s family’s home in Gifford, Fla., to conduct a search warrant for narcotics, according to an affidavit filed by the sheriff’s office in court.</p>
 
@@ -81,9 +112,7 @@ graphic
 
 <p>“As this case is on-going, we can only speak to the unnecessary tragedy of Ms. Woods’ death and the heartbreak of all those that loved her who still wait for answers and accountability,” said Coffee’s lawyers Adam Chrzan and Julia Graves in a statement.</p>
 
-<p>Woods’s mother told The Post that Taylor’s death has been hard on her because of the similarities. "It brought back a lot of memories of our daughter’s murder,” Yolanda Woods said.</p>
-
-Photo 
+<p>Woods’s mother told The Post that Taylor’s death has been hard on her because of the similarities. "It brought back a lot of memories of our daughter’s murder,” Yolanda Woods said.</p> 
 
 <p>India Kager, 27, is also among the women killed when police said they were shooting at someone else.</p>
 
@@ -107,7 +136,9 @@ Photo
 
 <p>“They’re still saying Breonna’s name, but they’ve forgotten India,” Best said. “They’re still not saying her name.”</p>
 
-Photo
+<div id="img-div"> 
+<img src="images/sayhernameprotest1.webp" alt="SHN1" id="image">
+<span class= "caption"><caption id="image-caption">Protestors gather for a "#SayHerName rally to honor Black women who's lives were cut short by police.</caption></span></div> <br>
 
 <h2>Why fewer women are killed</h2>
 
@@ -135,6 +166,11 @@ Photo
 
 <p>“I think that’s particularly true for Black women.”</p>
 
+<br>
+<blockquote><p>“They’re still not saying her name.”</p>
+<p>— Gina Best, India Kager's mother</p></blockquote>
+<br>
+
 <p>Some patterns in fatal shootings by police hold true for both genders.</p>
 
 <p>For women and men, about one-third of the police encounters that led to shootings began with a report of a domestic disturbance, a 911 call or a traffic stop, records show.</p>
@@ -143,11 +179,13 @@ Photo
 
 <p>As with fatal police shootings of men, the vast majority of the women killed were armed with a potential weapon at the time, although slightly less often: 89 percent of the women were armed, compared to 91 percent of the men.</p>
 
-graphic
-
 <p>For both genders, a gun was the most common weapon. Of men killed, 57 percent were armed with a gun and of women, 44 percent. In other cases, women were armed with knives, cars, toy weapons, hammers and hatchets.
 
-<p>By race, 147 of the women killed were White, 48 Black and 29 Hispanic. Five were Native American, four were Asian and three were other races. In 11 cases, race could not be determined. By percentages, men shot by police were less often White and more often Black or Hispanic.</p>
+<p>By race, 462 of the women killed 254 were White, 88 Black and 59 Hispanic. Nine were Native American, 11 were Asian and four were other races. In 37 cases, race could not be determined. By percentages, men shot by police were less often White and more often a minority.</p>
+
+<div class="mental">
+    <iframe id="datawrapper-chart" title="Over 450 women have been killed by police since 2015" aria-label="Small multiple column chart" id="datawrapper-chart-YBpuZ" src="https://datawrapper.dwcdn.net/YBpuZ/5/?theme=dark" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="310" data-external="1"></iframe><script type="text/javascript">window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r,i=0;r=e[i];i++)if(r.contentWindow===a.source){var d=a.data["datawrapper-height"][t]+"px";r.style.height=d}}});</script></div>
+    <br>
 
 <p>Since 2015, police have killed 26 unarmed women, including Taylor. Of those, 14 were White, seven were Black, four were Hispanic and one’s race was unknown. While about twice as many White women were shot and killed as Black women, White women account for five times the Black female population.</p>
 
@@ -158,8 +196,6 @@ graphic
 <p>Crenshaw offered another reason for the disparity: centuries of people associating dark skin with being a threat.</p>
 
 <p>“You don’t need to have Black people being more frequently arrested to have an implicit association with Blackness and danger,” she said. “That is a deep part of our culture.”</p>
-
-Photo 
 
 <h2>Killed at a home</h2>
 
@@ -209,6 +245,10 @@ Photo
 
 <p>Acevedo accused the officer who led the raid of lying to justify it.</p>
 
+<div id="img-div"> 
+<img src="images/blm2.jpg" alt="BLM" id="image">
+<span class= "caption"> <caption id="image-caption">Protestors gather for a Black Lives Matter rally.</caption></span></div> <br>
+
 <p>The officer was charged with two counts of murder, while he and another officer were charged with tampering with government records for allegedly falsifying documents related to the raid, the Harris County Prosecutor’s Office said in statements. Both officers have pleaded not guilty, and the cases are ongoing.</p>
 
 <p>Mike Doyle, an attorney for Nicholas’s family, said a forensic investigator hired by both families found that the officer who fired the shot fatal to Nicholas would have been unable to see her at the time and blindly fired the shot through a wall.</p>
@@ -232,8 +272,6 @@ Photo
 <p>But Eells cautioned against banning no-knock warrants. That tactic, although high-risk, is occasionally the best choice.</p>
 
 <p>“It doesn’t mean it’s safe, but it’s sometimes less dangerous than other options,” Eells said.</p>
-
-Photo 
 
 <h2>Mental crises end in killings</h2>
 
@@ -271,7 +309,11 @@ Photo
 
 <p>Jensen fired three shots, striking and killing Clements, the report says.</p>
 
-Photo 
+<br>
+<blockquote><p>“As long as Black women lose their lives in circumstances like these, their lost life won’t be dramatized in a way that mobilizes the kinds of reforms that have to happen in order to protect more life and to make police officers accountable."</p>
+<p>—Kimberlé Crenshaw, executive director of the African American Policy Forum</p>
+</blockquote>
+<br>
 
 <p>Antonio Romanucci, the Clements family’s attorney, told The Post that police should have called someone trained in mental crisis intervention during the standoff. In the worst-case scenario, he said, officers still should have been able to subdue Clements with a shield when she got out of the car with knives.</p>
 
@@ -287,7 +329,9 @@ Photo
 
 <p>“One of the biggest problems that I see is that we in law enforcement, we tend to be the catchall of society’s problems,” Roles said. “I don’t think that we in law enforcement are the most equipped to handle those with mental illness.”</p>
 
-Photo 
+<div id="img-div"> 
+<img src="images/blacklm.jpeg" alt="BLM" id="image">
+<span class= "caption"><caption id="image-caption">Advocates join forces at BLM protest.</caption></span></div> <br>
 
 <p>Like Clements, Hannah Williams had an established history of mental illness before she encountered police on the side of a California highway on July 5, 2019.</p>
 
@@ -313,6 +357,9 @@ Photo
 
 <p>“She was still growing — so young,” Ben Williams said in an interview. “She still had so much to go.”</p>
 
-<p class="contributors">Julie Tate, Drea Cornejo, Alice Crites, Eddy Palanzo, Ted Mellnik and Steven Rich contributed to this report. Graphics by Daniela Santamarina. Design and development by Madison Dong. Story editing by David Fallis. Graphics editing by Danielle Rindler. Photo editing by Nick Kirkpatrick. Copy editing by Melissa Ngo.</p>
+<p class="contributors">Julie Tate, Drea Cornejo, Alice Crites, Eddy Palanzo, Ted Mellnik and Steven Rich contributed to this report. Graphics by Daniela Santamarina. Design and development by Madison Dong. Story editing by David Fallis. Graphics editing by Danielle Rindler. Photo editing by Nick Kirkpatrick. Copy editing by Melissa Ngo.</p> 
+
+</div>
+
 </body>
 </html>
